src/QPoint.h


// 
// This file has been automatically generated by RaQt_maker V0.0.7.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQPointCtor_1();
EXTERNC void * SCWQPointCtor_1();
EXTERNC void * QWQPointCtor_2(int32_t  xpos, int32_t  ypos);
EXTERNC void * SCWQPointCtor_2(int32_t  xpos, int32_t  ypos);
EXTERNC int8_t QWQPointisNull(void * obj);
EXTERNC int32_t QWQPointx(void * obj);
EXTERNC int32_t QWQPointy(void * obj);
EXTERNC void QWQPointsetX(void * obj, int32_t  x);
EXTERNC void QWQPointsetY(void * obj, int32_t  y);
EXTERNC int32_t QWQPointmanhattanLength(void * obj);
EXTERNC void QWvalidateCB_QPoint(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQPointDtor(void *);
EXTERNC void SCWQPointDtor(void *);